--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DinDin旅行</title>
     <link rel="stylesheet" href="./Scss/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
-    <h1>Start Project</h1>
+    <div class="container">
+        <Nav>
+            <span class="material-symbols-outlined" id="menu-icon">
+                drag_handle
+            </span>
+            <img src="" alt="">
+            
+        </Nav>
+        <div class="banner">
+            
+        </div>
+    </div>
 </body>
 </html>
