--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="search-area">
                 <div class="custom-select">
                     <div class="selected-option" id="pointer"> 
-                        <p><img id="target-img" src="" alt=""> 找路線</p>
+                        <p><img id="target-img" src="./web_pictures/icon/map.svg" alt=""> 找路線</p>
                         <img src="./web_pictures/icon/arrow-buttom.svg" alt="arrow">
                     </div>
                     <ul class="option-list hide">
