--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
         </Nav>
         <div class="banner">
-            <div class="search-area">
+            <div class="search-area-container">
                 <div class="custom-select">
                     <div class="selected-option" id="pointer"> 
                         <p><img id="target-img" src="./web_pictures/icon/map.svg" alt=""> 找路線</p>
@@ -35,9 +35,13 @@
                         <li><img id="map" src="./web_pictures/icon/map.svg" alt=""> 找路線</li>
                         <li><img id="bike" src="./web_pictures/icon/bike.svg" alt="bike"> 找單車</li>
                     </ul>
-                  </div>
-                <label for=""></label>
-
+                </div>
+                <div class="where-to-go">
+                    <label  for="my-input">
+                        <span class="where-to-go-input"><img id="bike" src="./web_pictures/icon/map-pin.svg" alt="bike">想去哪裡?</span>
+                    </label>
+                    <input id="my-input" type="text">
+                </div>
             </div>
         </div>
     </div>
