--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                                 26km
                             </p>
                         </div>
+                        <a href="#"></a>
                     </div>
                     <div class="route-card">
                         <div class="card-pic">
@@ -108,6 +109,7 @@
                                 </span>
                                 20km</p>
                         </div>
+                        <a href="#"></a>
                     </div>
                     <div class="route-card">
                         <div class="card-pic">
@@ -120,6 +122,7 @@
                                 width
                                 </span>2.4km</p>
                         </div>
+                        <a href="#"></a>
                     </div>
                     <div class="route-card">
                         <div class="card-pic">
@@ -132,6 +135,7 @@
                                 width
                                 </span>0.6km</p>
                         </div>
+                        <a href="#"></a>
                     </div>
                     <div class="route-card">
                         <div class="card-pic">
@@ -144,6 +148,7 @@
                                 width
                                 </span>17km</p>
                         </div>
+                        <a href="#"></a>
                     </div>
                     <div class="route-card">
                         <div class="card-pic">
@@ -156,10 +161,11 @@
                                 width
                                 </span>1.1km</p>
                         </div>
+                        <a href="#"></a>
                     </div>
                 </div>
                 <div class="more-button">
-                    更多單車路線
+                    <a href="#">更多單車路線</a>
                 </div>
             </div>
         </div>
@@ -169,14 +175,192 @@
                 <h2>與夥伴共同的熱血與衝勁</h2>
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">Slide 1</div>
-                        <div class="swiper-slide">Slide 2</div>
-                        <div class="swiper-slide">Slide 3</div>
-                        <div class="swiper-slide">Slide 4</div>
+                        <div class="swiper-slide">
+                            <div class="slide-card">
+                                <img src="./web_pictures/index_activity/index_activity_1.jpg" alt="">
+                                <div class="slide-content">
+                                    <div class="slide-info">
+                                        <div class="date">2021/11/29</div>
+                                        <div class="distance">
+                                            <p class="align"><span class="material-symbols-outlined">
+                                            width
+                                            </span>59km</p>
+                                        </div>
+                                    </div>
+                                    <p>海天一線海濱遊</p>
+                                    <div class="button-register">立即報名</div>
+                                </div>
+                                <a href="#"></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slide-card">
+                                <img src="./web_pictures/index_activity/index_activity_2.jpg" alt="">
+                                <div class="slide-content">
+                                    <div class="slide-info">
+                                        <div class="date">2022/01/29</div>
+                                        <div class="distance">
+                                            <p class="align"><span class="material-symbols-outlined">
+                                                width
+                                                </span>359.6km</p>
+                                        </div>
+                                    </div>
+                                    <p>一日北高挑戰</p>
+                                    <div class="button-register">立即報名</div>
+                                </div>
+                                <a href="#"></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slide-card">
+                                <img src="./web_pictures/index_activity/index_activity_3.jpg" alt="">
+                                <div class="slide-content">
+                                    <div class="slide-info">
+                                        <div class="date">2021/02/25</div>
+                                        <div class="distance">
+                                            <p class="align"><span class="material-symbols-outlined">
+                                                width
+                                                </span>85km</p>
+                                        </div>
+                                    </div>
+                                    <p>黃金山城濱海慢騎</p>
+                                    <div class="button-register">立即報名</div>
+                                </div>
+                                <a href="#"></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slide-card">
+                                <img src="./web_pictures/index_activity/index_activity_4.jpg" alt="">
+                                <div class="slide-content">
+                                    <div class="slide-info">
+                                        <div class="date">2021/05/11</div>
+                                        <div class="distance">
+                                            <p class="align"><span class="material-symbols-outlined">
+                                                width
+                                                </span>38km</p>
+                                        </div>
+                                    </div>
+                                    <p>台中輕鬆騎</p>
+                                    <div class="button-register">立即報名</div>
+                                </div>
+                                <a href="#"></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slide-card">
+                                <img src="./web_pictures/index_activity/index_activity_4.jpg" alt="">
+                                <div class="slide-content">
+                                    <div class="slide-info">
+                                        <div class="date">2021/05/11</div>
+                                        <div class="distance">
+                                            <p class="align"><span class="material-symbols-outlined">
+                                                width
+                                                </span>38km</p>
+                                        </div>
+                                    </div>
+                                    <p>台中輕鬆騎</p>
+                                    <div class="button-register">立即報名</div>
+                                </div>
+                                <a href="#"></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slide-card">
+                                <img src="./web_pictures/index_activity/index_activity_3.jpg" alt="">
+                                <div class="slide-content">
+                                    <div class="slide-info">
+                                        <div class="date">2021/05/11</div>
+                                        <div class="distance">
+                                            <p class="align"><span class="material-symbols-outlined">
+                                                width
+                                                </span>38km</p>
+                                        </div>
+                                    </div>
+                                    <p>台中輕鬆騎</p>
+                                    <div class="button-register">立即報名</div>
+                                </div>
+                                <a href="#"></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slide-card">
+                                <img src="./web_pictures/index_activity/index_activity_3.jpg" alt="">
+                                <div class="slide-content">
+                                    <div class="slide-info">
+                                        <div class="date">2021/05/11</div>
+                                        <div class="distance">
+                                            <p class="align"><span class="material-symbols-outlined">
+                                                width
+                                                </span>38km</p>
+                                        </div>
+                                    </div>
+                                    <p>台中輕鬆騎</p>
+                                    <div class="button-register">立即報名</div>
+                                </div>
+                                <a href="#"></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slide-card">
+                                <img src="./web_pictures/index_activity/index_activity_3.jpg" alt="">
+                                <div class="slide-content">
+                                    <div class="slide-info">
+                                        <div class="date">2021/05/11</div>
+                                        <div class="distance">
+                                            <p class="align"><span class="material-symbols-outlined">
+                                                width
+                                                </span>38km</p>
+                                        </div>
+                                    </div>
+                                    <p>台中輕鬆騎</p>
+                                    <div class="button-register">立即報名</div>
+                                </div>
+                                <a href="#"></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slide-card">
+                                <img src="./web_pictures/index_activity/index_activity_3.jpg" alt="">
+                                <div class="slide-content">
+                                    <div class="slide-info">
+                                        <div class="date">2021/05/11</div>
+                                        <div class="distance">
+                                            <p class="align"><span class="material-symbols-outlined">
+                                                width
+                                                </span>38km</p>
+                                        </div>
+                                    </div>
+                                    <p>台中輕鬆騎</p>
+                                    <div class="button-register">立即報名</div>
+                                </div>
+                                <a class="super-link" href="#"></a>
+                            </div>
+                        </div>
                     </div>
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
-                    <div class="swiper-pagination"></div>
+                </div>
+                <div class="more-activities">
+                    <a href="#">更多單車路線</a>
+                </div>
+            </div>
+        </div>
+        <div class="contact-container">
+            <h3>Contact Us</h3>
+            <h2>聯絡我們</h2>
+            <div class="contact-info">
+                <div class="contact-card">
+                    <p>歡迎直接聯絡我們，不論您需要建議、排除狀況、意見回饋或尋求解答，我們將協助您快速地解決問題。</p>
+                    <div class="contact-name-phone">
+                        <label for="name"></label>
+                        <input id="name" type="text" placeholder="名稱">
+                        <label for="phone"></label>
+                        <input id="phone"type="text" placeholder="電話">
+                    </div>
+                    <div class="contact-mail"></div>
+                    <div class="contact-comment"></div>
+                    <div class="contact-button"></div>
                 </div>
             </div>
         </div>
