--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 <body>
     <div class="wrap">
         <Nav>
-            <span class="material-symbols-outlined" id="menu-icon">
-                <a href="#">drag_handle</a> 
-            </span>
+            <div class="material-symbols-outlined" id="menu-icon">
+                <p class="menu-bar white-text">drag_handle</p>
+                <ul class="nav-menu hide blur-background">
+                    <li><a href="#">常見問題</a></li>
+                    <li><a href="#">關於我們</a></li>
+                    <li><a href="#">Ubike官方網站</a></li>
+                </ul>
+            </div>
             <div class="logo">
                 <img class="dark-logo" src="./web_pictures/logo_dark.png" alt="logo">
                 <img class="light-logo hide" src="./web_pictures/logo_light.png" alt="logo">
